<resources>
    <string name="app_name">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="enter_user">Enter your username</string>
    <string name="enter_password">Enter your password</string>

</resources>